# BitUP

./: CMakeLists.txt  Privacy_Policy.txt  README.md  main.cpp
BitUP_GUI/: BitUP_GUI.sln
BitUP_GUI/BitUP_GUI/: BitUP_GUI.csproj  Form1.Designer.cs  Form1.cs  Program.cs
BitUP_GUI/BitUP_GUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
include/: hash.h
include/cvector/: vector.h
include/filesystem/: base.h  dir.h  filesystem.h  properties.h  type.h
include/renalog/: renalog.h  renalog_basic.h  renalog_core.h  renalog_read.h
src/: CMakeLists.txt  hash.cpp
src/bitupignore/: .gitignore  CMakeLists.txt  bitupignore_parser.c
src/cvector/: CMakeLists.txt  vector.c
src/filesystem/: CMakeLists.txt  dir.c  dir.cpp  properties.c  type.c
src/renalog/: CMakeLists.txt  renalog_core.cpp  renalog_read.cpp
